--- a/README
+++ b/README
@@ -17,9 +17,7 @@ To install this module, run the following commands:
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2005 Jerome Fenal
+Copyright (C) 2005 Jérôme Fenal
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself.
