--- a/Changes
+++ b/Changes
@@ -14,4 +14,5 @@ Revision history for Acme-MetaSyntactic-RefactorCode
         Applied patches by Adriano Ferreira.
         Added kwalitee.t test.
         
-
+0.04    Dec 12th, 2006
+        Corrections by Adriano Ferreira.
