Import of JFENAL/Acme-MetaSyntactic-RefactorCode-0.05 from CPAN.
gitpan-cpan-distribution: Acme-MetaSyntactic-RefactorCode
gitpan-cpan-version:      0.05
gitpan-cpan-path:         JFENAL/Acme-MetaSyntactic-RefactorCode-0.05.tar.gz
gitpan-cpan-author:       JFENAL
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -16,3 +16,6 @@ Revision history for Acme-MetaSyntactic-RefactorCode
         
 0.04    Dec 12th, 2006
         Corrections by Adriano Ferreira.
+
+0.05    Feb 3rd, 2007
+        Increase kwalitee rating with license
